test/error/error.input66.zc
Enum value redeclared:z on line 2
